[tool.poetry]
name = "single-db"
version = "0.1.0"
description = "Demonstrating SQLAlchemy with Ellar"
authors = ["Ezeudoh Tochukwu <tochukwu.ezeudoh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "single_db"}]

[tool.poetry.dependencies]
python = "^3.8"
ellar-cli = "^0.4.0"
ellar = "^0.6.2"
ellar-sql = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ellar]
default = "single_db"
[tool.ellar.projects.single_db]
project-name = "single_db"
application = "single_db.server:bootstrap"
config = "single_db.config:DevelopmentConfig"
root-module = "single_db.root_module:ApplicationModule"
